--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div id='stars3'></div>
 		<div class="reveal">
 			<div class="slides" style="width: 90vw;">
-					<section>
+					<section data-transition="fade-in fade-out">
 						<span>....................................................................................</span>
 						<br>
 						<span class="header-1">CO</span>
@@ -49,18 +49,18 @@
 						<br>
 						<span>....................................................................................</span>
 					</section>
-					<section>
+					<section data-transition="fade-in fade-out">
 						<section>
 							<div style="display: flex; align-items: center; justify-content: center;">
 								<img src="./lib/img/earth.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
 								<span class="header-title">Zacznijmy od <br> wielkości planet</span>
-								<img src="./lib/img/venus.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
+								<img src="./lib/img/saturn.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
 							</div>
 						</section>
 						<section>
 							<div class="mass-table">
 								<div class="single-planet">
-									<img src="https://cdn.iconscout.com/icon/free/png-256/sun-planet-astrology-star-galxy-solar-system-darkhole-1-20784.png" style="width: 120px; max-height: 120px; background: none; border: none; box-shadow: none;" />
+									<img src="./lib/img/sunNew.svg" style="width: 120px; max-height: 120px; background: none; border: none; box-shadow: none;" />
 									<br>
 									<span>Słońce</span>
 									<p>Promień planety: 1,695,508km</p>
@@ -142,11 +142,11 @@
 							</div>
 						</section>
 						<section>
-							<h3>Dla porównania</h3>
+							<p class="compare-header">Dla porównania</p>
 							<div class="single-planet-compare">
 									<span>Słońce</span>
 									<br>
-									<img src="https://cdn.iconscout.com/icon/free/png-256/sun-planet-astrology-star-galxy-solar-system-darkhole-1-20784.png" style="width: 350px; max-height: 350px; background: none; border: none; box-shadow: none;" />
+									<img src="./lib/img/sunNew.svg" style="width: 350px; max-height: 350px; background: none; border: none; box-shadow: none;" />
 							</div>
 							<div class="compare-table">
 								<div class="single-planet-compare">
@@ -192,7 +192,7 @@
 							</div>
 						</section>
 					</section>
-					<section>
+					<section data-transition="fade-in fade-out">
 						<section>
 							<div style="display: flex; align-items: center; justify-content: center;">
 								<img src="./lib/img/atom.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
@@ -201,7 +201,7 @@
 							</div>
 						</section>
 					</section>
-					<section>
+					<section data-transition="fade-in fade-out">
 						<section>
 							<div style="display: flex; align-items: center; justify-content: center;">
 								<img src="./lib/img/hot.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
@@ -210,7 +210,7 @@
 							</div>
 						</section>
 					</section>
-					<section>
+					<section data-transition="fade-in fade-out">
 						<section>
 							<div style="display: flex; align-items: center; justify-content: center;">
 								<img src="./lib/img/startup.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
@@ -219,7 +219,7 @@
 							</div>
 						</section>
 					</section>
-					<section>
+					<section data-transition="fade-in fade-out">
 						<section>
 							<div style="display: flex; align-items: center; justify-content: center;">
 								<img src="./lib/img/teamwork.svg" style="width: 120px; height: 120px; background: none; border: none; box-shadow: none; margin: 0 20px;" />
@@ -254,6 +254,137 @@
 					// Bounds for smallest/largest possible scale to apply to content
 					minScale: 0.2,
 					maxScale: 1.5,
+
+					// Display presentation control arrows
+					controls: true,
+
+					// Help the user learn the controls by providing hints, for example by
+					// bouncing the down arrow when they first encounter a vertical slide
+					controlsTutorial: true,
+
+					// Determines where controls appear, "edges" or "bottom-right"
+					controlsLayout: 'bottom-right',
+
+					// Visibility rule for backwards navigation arrows; "faded", "hidden"
+					// or "visible"
+					controlsBackArrows: 'faded',
+
+					// Display a presentation progress bar
+					progress: true,
+
+					// Display the page number of the current slide
+					slideNumber: false,
+
+					// Add the current slide number to the URL hash so that reloading the
+					// page/copying the URL will return you to the same slide
+					hash: false,
+
+					// Push each slide change to the browser history. Implies `hash: true`
+					history: false,
+
+					// Enable keyboard shortcuts for navigation
+					keyboard: true,
+
+					// Enable the slide overview mode
+					overview: true,
+
+					// Vertical centering of slides
+					center: true,
+
+					// Enables touch navigation on devices with touch input
+					touch: true,
+
+					// Loop the presentation
+					loop: false,
+
+					// Change the presentation direction to be RTL
+					rtl: false,
+
+					// See https://github.com/hakimel/reveal.js/#navigation-mode
+					navigationMode: 'default',
+
+					// Randomizes the order of slides each time the presentation loads
+					shuffle: false,
+
+					// Turns fragments on and off globally
+					fragments: true,
+
+					// Flags whether to include the current fragment in the URL,
+					// so that reloading brings you to the same fragment position
+					fragmentInURL: false,
+
+					// Flags if the presentation is running in an embedded mode,
+					// i.e. contained within a limited portion of the screen
+					embedded: false,
+
+					// Flags if we should show a help overlay when the questionmark
+					// key is pressed
+					help: true,
+
+					// Flags if speaker notes should be visible to all viewers
+					showNotes: false,
+
+					// Global override for autoplaying embedded media (video/audio/iframe)
+					// - null: Media will only autoplay if data-autoplay is present
+					// - true: All media will autoplay, regardless of individual setting
+					// - false: No media will autoplay, regardless of individual setting
+					autoPlayMedia: null,
+
+					// Global override for preloading lazy-loaded iframes
+					// - null: Iframes with data-src AND data-preload will be loaded when within
+					//   the viewDistance, iframes with only data-src will be loaded when visible
+					// - true: All iframes with data-src will be loaded when within the viewDistance
+					// - false: All iframes with data-src will be loaded only when visible
+					preloadIframes: null,
+
+					// Number of milliseconds between automatically proceeding to the
+					// next slide, disabled when set to 0, this value can be overwritten
+					// by using a data-autoslide attribute on your slides
+					autoSlide: 0,
+
+					// Stop auto-sliding after user input
+					autoSlideStoppable: true,
+
+					// Use this method for navigation when auto-sliding
+					autoSlideMethod: Reveal.navigateNext,
+
+					// Specify the average time in seconds that you think you will spend
+					// presenting each slide. This is used to show a pacing timer in the
+					// speaker view
+					defaultTiming: 120,
+
+					// Enable slide navigation via mouse wheel
+					mouseWheel: false,
+
+					// Hide cursor if inactive
+					hideInactiveCursor: true,
+
+					// Time before the cursor is hidden (in ms)
+					hideCursorTime: 5000,
+
+					// Hides the address bar on mobile devices
+					hideAddressBar: true,
+
+					// Opens links in an iframe preview overlay
+					// Add `data-preview-link` and `data-preview-link="false"` to customise each link
+					// individually
+					previewLinks: false,
+
+					// Transition style
+					transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+					// Transition speed
+					transitionSpeed: 'default', // default/fast/slow
+
+					// Transition style for full page slide backgrounds
+					backgroundTransition: 'fade', // none/fade/slide/convex/concave/zoom
+
+					// Number of slides away from the current that are visible
+					viewDistance: 3,
+
+					// The display mode that will be used to show slides
+					display: 'block'
+
 			});
 		</script>
 	</body>
